<resources>
    <string name="app_name">Manager</string>
    <string name="tv_nome">Nome:</string>
    <string name="cnpj">CNPJ</string>
    <string name="caixa">Caixa</string>
    <string name="capacidade">Capacidade</string>
    <string name="ar_condicionado">Ar condicionado</string>
    <string name="lugares">Lugares:</string>
    <string name="tv_caixa">Caixa</string>
    <string name="bt_inserir_nova_empresa">Inserir nova empresa</string>
    <string name="bt_gereciar_empresas">Gereciar Empresas</string>
    <string name="tv_cnpj">CNPJ:</string>
    <string name="nome">Nome</string>
    <string name="rb_empresa">Empresa</string>
    <string name="rb_cinema">Cinema</string>
    <string name="rb_posto">Posto</string>
    <string name="rb_supermercado">Supermercado</string>
    <string name="item_removido">Item removido:</string>
    <string name="voltar">Voltar</string>
    <string name="remover">Remover Empresa</string>
    <string name="editar_empresa">Editar Empresa</string>
    <string name="item_editado">Item editado:</string>
    <string name="tela_salvar">Tela Salvar</string>
    <string name="total_caixa">Total Caixa:</string>
    <string name="somar_caixa">Somar caixa</string>
    <string name="recuperar_lista_salva">Recuperar lista Salva</string>
    <string name="salvar">Salvar</string>
    <string name="nome_do_arquivo">Nome do arquivo</string>
    <string name="dado_recuperado">Dado recuperado:</string>
</resources>